Test/git-issues/git-issue-3187b.dfy
// RUN: %exits-with 2 %baredafny verify %args "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

module P {
  class A {
    var x := 5
  }
}
